--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    Ecommerce Static Webpage
+    <link rel="stylesheet" href="./index.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
+  <body>
+    <div class="nav-bar-container">
+      <div class="logo">
+        <img src="./Assets/images//logo.png" />
+      </div>
+      <div class="nav">
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Home</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </body>
 </html>
