image and header completed

--- a/index.html
+++ b/index.html
@@ -8,20 +8,37 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="nav-bar-container">
-      <div class="logo">
-        <img src="./Assets/images//logo.png" />
+    <div class="container">
+      <div class="nav-bar-container">
+        <div class="logo">
+          <img src="./Assets/images//logo.png" width="125px" />
+        </div>
+        <div class="nav">
+          <nav>
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">Home</a></li>
+              <li><a href="">Home</a></li>
+              <li><a href="">Home</a></li>
+              <li><a href="">Home</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
-      <div class="nav">
-        <nav>
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Home</a></li>
-          </ul>
-        </nav>
+      <div class="row">
+        <div class="col2">
+          <h1>Give You Workout <br />A New Style!</h1>
+          <p>
+            Kit ne Dard ke bad bhi mai tuhe nahi bhula paya , i dont understand
+            the thing which goes on but butwhat ever is hapng is good or bad o
+            might go woring in some step of life bt it can be easy to folo the
+            lenght strng of the ark
+          </p>
+        </div>
+
+        <div class="col2">
+          <img src="Assets/images/image1.png" />
+        </div>
       </div>
     </div>
   </body>
