--- a/index.html
+++ b/index.html
@@ -6,38 +6,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="container">
-      <div class="nav-bar-container">
-        <div class="logo">
-          <img src="./Assets/images//logo.png" width="125px" />
+    <div class="header">
+      <div class="container">
+        <div class="nav-bar-container">
+          <div class="logo">
+            <img src="./Assets/images//logo.png" width="125px" />
+          </div>
+          <div class="nav">
+            <nav>
+              <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Home</a></li>
+              </ul>
+            </nav>
+            <img src="./Assets/images/cart.png" width="30px" height="30px" />
+          </div>
         </div>
-        <div class="nav">
-          <nav>
-            <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">Home</a></li>
-              <li><a href="">Home</a></li>
-              <li><a href="">Home</a></li>
-              <li><a href="">Home</a></li>
-            </ul>
-          </nav>
+        <div class="row">
+          <div class="col2">
+            <h1>Give You Workout <br />A New Style!</h1>
+            <p>
+              Kit ne Dard ke bad bhi mai tuhe nahi bhula paya , i dont
+              understand the thing which goes on but butwhat ever is hapng is
+              good or bad o might go woring in some step of life bt it can be
+              easy to folo the lenght strng of the ark
+            </p>
+            <a href="#" class="explore-button">Explore Now &#8594;</a>
+          </div>
+
+          <div class="col2">
+            <img src="Assets/images/image1.png" />
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col2">
-          <h1>Give You Workout <br />A New Style!</h1>
-          <p>
-            Kit ne Dard ke bad bhi mai tuhe nahi bhula paya , i dont understand
-            the thing which goes on but butwhat ever is hapng is good or bad o
-            might go woring in some step of life bt it can be easy to folo the
-            lenght strng of the ark
-          </p>
-        </div>
+    </div>
 
-        <div class="col2">
-          <img src="Assets/images/image1.png" />
+    <!----Ffeature categories-->
+    <div class="categories">
+      <div class="small-categories">
+        <div class="row">
+          <div class="col-3">
+            <img src="Assets/images/category-1.jpg" />
+          </div>
+          <div class="col-3">
+            <img src="Assets/images/category-2.jpg" />
+          </div>
+
+          <div class="col-3">
+            <img src="Assets/images/category-3.jpg" />
+          </div>
         </div>
       </div>
     </div>
