latest product gallery added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+
+    <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins:wght@300&display=swap"
       rel="stylesheet"
     />
@@ -50,7 +57,7 @@
       </div>
     </div>
 
-    <!----Ffeature categories-->
+    <!----feature categories-->
     <div class="categories">
       <div class="small-categories">
         <div class="row">
@@ -63,6 +70,119 @@
 
           <div class="col-3">
             <img src="Assets/images/category-3.jpg" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!----feature product-->
+    <div class="feature-product">
+      <div class="small-categories">
+        <h2 class="title">Feature Products</h2>
+        <div class="row">
+          <div class="col-4">
+            <img src="./Assets//images/product-1.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>$50</p>
+          </div>
+          <div class="col-4">
+            <img src="./Assets//images/product-2.jpg" />
+            <h4>HRX Black Shoes</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>$100</p>
+          </div>
+          <div class="col-4">
+            <img src="./Assets//images/product-3.jpg" />
+            <h4>Track Pant Cool</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>$140</p>
+          </div>
+
+          <div class="col-4">
+            <img src="./Assets//images/product-4.jpg" />
+            <h4>Polo T-Shirt</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="fa fa-star-half-o" aria-hidden="true"></i>
+            </div>
+            <p>$90</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="small-categories">
+        <h2 class="title">Latest Products</h2>
+        <div class="row">
+          <div class="col-4">
+            <img src="./Assets//images/product-5.jpg" />
+            <h4>Casual Shoes</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>$50</p>
+          </div>
+          <div class="col-4">
+            <img src="./Assets//images/product-6.jpg" />
+            <h4>Puma T-Shirt</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>$100</p>
+          </div>
+          <div class="col-4">
+            <img src="./Assets//images/product-7.jpg" />
+            <h4>HRX Socks</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>$140</p>
+          </div>
+
+          <div class="col-4">
+            <img src="./Assets//images/product-8.jpg" />
+            <h4>Smart Watch</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="fa fa-star-half-o" aria-hidden="true"></i>
+            </div>
+            <p>$90</p>
           </div>
         </div>
       </div>
