offer container added

--- a/index.html
+++ b/index.html
@@ -187,5 +187,26 @@
         </div>
       </div>
     </div>
+
+    <!---Offer -->
+    <div class="offer">
+      <div class="small-categories">
+        <div class="row">
+          <div class="col2 offer-img">
+            <img src="Assets/images/exclusive.png" />
+          </div>
+          <div class="col2">
+            <p>Exxlusively Available On RedStore</p>
+            <h1>Smart Band</h1>
+            <small>
+              The Mi SMart Brand 4 features a 39.9% larger (than Mi Band 3)
+              AMOLED color full-toch display with adjustable brightness, so
+              everything is clear as can be.
+            </small>
+            <a href="#" class=".explore-button">Buy Now &#8594;</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
