--- a/index.html
+++ b/index.html
@@ -282,5 +282,57 @@
         </div>
       </div>
     </div>
+    <div class="brands">
+      <div class="small-container">
+        <div class="row">
+          <div class="col-5">
+            <img src="./Assets/images/logo-coca-cola.png" />
+          </div>
+          <div class="col-5">
+            <img src="./Assets/images/logo-godrej.png" />
+          </div>
+          <div class="col-5">
+            <img src="./Assets/images/logo-oppo.png" />
+          </div>
+          <div class="col-5">
+            <img src="./Assets/images/logo-paypal.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!----------- footer ---------->
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col-1">
+            <h3>Download Our App</h3>
+            <p>Download Our App In Your Mobile</p>
+            <div class="app-logo">
+              <img src="./Assets/images/play-store.png" />
+              <img src="./Assets/images/app-store.png" />
+            </div>
+          </div>
+
+          <div class="footer-col-2">
+            <img src="Assets/images/logo-white.png" alt="company_name_logo" />
+            <p>
+              Our Purpose Is To Sustainably Make the Pleasure and Benefits of
+              Sports Accessible to the Many.
+            </p>
+          </div>
+
+          <div class="footer-col-3">
+            <h3>Userful Links</h3>
+            <ul>
+              <li>Coupons</li>
+              <li>Blog Post/</li>
+              <li>Return Policy</li>
+              <li>Join Affiliate</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
