--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <nav>
               <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">Home</a></li>
-                <li><a href="">Home</a></li>
-                <li><a href="">Home</a></li>
-                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Account</a></li>
               </ul>
             </nav>
             <img src="./Assets/images/cart.png" width="30px" height="30px" />
