--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="">Home</a></li>
                 <li><a href="">Products</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="">Contact Us</a></li>
                 <li><a href="">Account</a></li>
               </ul>
             </nav>
